--- a/Appology.MVC/packages.config
+++ b/Appology.MVC/packages.config
@@ -5,7 +5,7 @@
   <package id="Cronofy" version="0.28.1" targetFramework="net472" />
   <package id="Dapper" version="1.60.6" targetFramework="net461" />
   <package id="DFMInfrastructure" version="1.0.3" targetFramework="net472" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
@@ -29,11 +29,16 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="MiniProfiler" version="4.2.22" targetFramework="net472" />
+  <package id="MiniProfiler.EF6" version="4.2.22" targetFramework="net472" />
+  <package id="MiniProfiler.Mvc5" version="4.2.22" targetFramework="net472" />
+  <package id="MiniProfiler.Shared" version="4.2.22" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Monzo" version="0.11.0.21" targetFramework="net472" />
   <package id="Nager.Date" version="1.27.1" targetFramework="net472" />
