--- a/Appology/packages.config
+++ b/Appology/packages.config
@@ -7,15 +7,26 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="MiniProfiler.Shared" version="4.2.22" targetFramework="net472" />
   <package id="Nager.Date" version="1.27.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
   <package id="NodaTime" version="3.0.0" targetFramework="net472" />
   <package id="SharpRaven" version="2.4.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
